# companion-app

./: .gitignore  AGENTREADME.md  README.md  package.json
application/: AGENTREADME.md  Cargo.toml  core.md  esbuild.config.ts  package-lock.json  package.json  tsconfig.json
application/skills/figma-design-context/: skill.md
application/skills/fix-vulnerabilities/: skill.md
application/skills/git-apis/: skill.md
application/skills/git-workflow/: skill.md
application/skills/gitlab-mr-automation/: skill.md
application/skills/jira-ticket/: skill.md
application/skills/read-file/: skill.md
application/skills/run-command/: skill.md
application/skills/summarize/: skill.md
application/skills/web-fetch/: skill.md
application/src/: index.ts  main.rs
application/tests/: action-parser.test.ts  agent-pool.test.ts  agent-prompt.test.ts  auth-skills.test.ts  build.test.ts  client.test.ts  client_test.rs  config.test.ts  config_test.rs  context-manager.test.ts  context_inject_test.rs  default-skills.test.ts  image_input_test.rs  input_test.rs  integration.test.ts  memory-pruner.test.ts  memory-store.test.ts  memory.test.ts  memory_store_test.rs  model-selector.test.ts  model_routing_test.rs  model_selector_test.rs  orchestrator.test.ts  orchestrator_test.rs  perf_test.rs  planner_test.rs  pool_test.rs  pruner_test.rs  session.test.ts  session_test.rs  skill-executor.test.ts  skill-loader.test.ts  skill-matcher.test.ts  skill-registry.test.ts  skill_executor_test.rs  skill_loader_test.rs  smoke_test.rs  streaming.test.ts  tui-input.test.ts  tui-output.test.ts  (+1 more)
(+126 files in other folders)
