[package]
name = "companion"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
ratatui = "0.29"
futures-util = "0.3"
base64 = "0.22"
tiktoken-rs = "0.6"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
tokio-stream = "0.1"

[dev-dependencies]
tempfile = "3"
